[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ynab-migrator"
version = "0.1.0"
description = "Resumable YNAB plan migration CLI with strong parity checks."
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
ynab-migrator = "ynab_migrator.cli:main"

[tool.setuptools]
packages = ["ynab_migrator"]
